--- a/WebStyleWPF/WebStyleWPF.csproj
+++ b/WebStyleWPF/WebStyleWPF.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlTags" Version="9.0.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2592.51" />
   </ItemGroup>
 
